# mealy-moore-minimization

./: .gitignore  ArgumentsParser.h  AutomataController.h  CMakeLists.txt  README.md  lab1.manifest.yaml  lab2.manifest.yaml  main.cpp
Automata/: IAutomata.h  MealyAutomata.h  MooreAutomata.h  t.txt
